--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+/dist
+/node_modules
+/.angular/cache
+/.idea
+.DS_Store
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
