--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,10 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
+              "src/favicon.ico",
               {
+                
                 "glob": "**/*",
                 "input": "public"
               }
